--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.93.3",
     "clsx": "^2.1.1",
     "fast-xml-parser": "^5.3.4",
     "lucide-react": "^0.562.0",
